--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,6 @@
 (next release) on (date of next release)
 
-08.07.99 VZ: import of XFMail and .mailrc (Unix) address books added
+08.07.99 VZ: import of XFMail, .mailrc and PINE (Unix) address books added
 09.07.99 KB: made python work again
 07.07.99 VZ: importing of address books added (CSV and TAB formats)
 06.07.99 KB: fixed New Mail dialog showing empty lines
