1. removed autogenerated files (I have conflicts in them all the time, painful) 2. Profile::DeleteGroup() respects the profile path (I wonder how many other    methods don't respect it neither) 3. wxPTextEntry now has chances to actually work 4. new GUI for ADB import - a bit better, but needs testing 5. some more new (ugly) icons 6. new dialog for configuring custom headers, "Configure headers" dialog    modified to invoke it for "advanced" users

--- a/TODO
+++ b/TODO
@@ -121,6 +121,10 @@ $Id$
 		page probably?
 2		different icon for activity log frame
 2	VZ?	make activity log frame appear on demand only
+
+2	VZ	printing from ADB
+2	VZ	save control values in ImportAdb dialog (wxPCheckBox?)
+
 2		fix es.po - many little errors
 2	KB	optionally activate tearoff menus
 
