--- a/TODO
+++ b/TODO
@@ -128,6 +128,8 @@ from 32bitsonline review:
 4		add option to hide messages marked as deleted
 4		in that case ask for auto-expunge on folder close
 
+2		Add code to collect split-up mime content from
+		multiple messages and decode it.
 *********************************************************************
 *** TESTS
 *********************************************************************
