--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 (next release) on (date of next release)
 
+17.07.99 KB: folder flag to force re-open on ping for broken POP servers added
+             quoted printable parsing bug removed
+             messages now get saved with right CR/LF convention
 15.07.99 VZ: dialogs now have vertical scrollbars and should be usable in any
              screen resolution now and not only 1024*768 or greater
 11.07.99 VZ: import of Eudora address books added
